# near-duplicate-text-detection-service

./: README.md  pyproject.toml
docker/: docker-compose.yml
docker/app/: Dockerfile
docs/: submission.csv  submission_partial.csv  submission_test.csv
scripts/: generate_submission.py  run_demo.py
src/duplicate_detection/: __init__.py  bm25_index.py  embedder.py  feedback.py  loader.py  models.py  monoactive.py  preprocess.py  service.py  strategies.py
src/duplicate_detection/api/: app.py
